--- a/KrysiaBartek2024/analyses/zaczek_30_09_24.tex
+++ b/KrysiaBartek2024/analyses/zaczek_30_09_24.tex
@@ -29,7 +29,15 @@
 (u nas \xspades 4) niestety czapowe. Po innym też
 idzie, chociaż nie tak bezproblemowo.
 
-\pagebreak
+[KK] Pasowanie w 8pc na 1\nt partnera jest w pełni 
+uzasadnioną decyzją, aczkolwiek tutaj mamy świetne 
+8pc. Druga \xspades Q nie traci na wartości po otwarciu 
+1\nt partnera, a do tego posiadamy T9765 jako 
+źródło lew z dużą ilością potencjalnych dojść. 
+\pass w tym przypadku nie jest poprawny, 
+ale warto pasować w niektóre ręce z 8pc. 
+
+
 \section*{Rozdanie 2}
 \handdiagramv{\vhand{J6532}{5}{KJ6}{KQ53}}
 {\vhand{874}{AK843}{Q82}{97}}
@@ -56,6 +64,35 @@ pewnie starałabym się impasować trefle zamiast liczyć
 na wejście 1\spades z piątego wałka. Ściągnęłam 2
 kiery i zagrałam trefla. \vul{N} wyszedł w pika, po raz kolejny
 ułatwiając mi zadanie. Oddałam \xhearts J, \xclubs Q i \xdiams K.
+
+[KK] Tutaj na szczęście nie ma 17pc 
+na 4432 bez potencjału na lewy. 
+Ale nie mamy lew!!! Mamy potencjał lewowy, 
+dobry kolor treflowy, ale nie bardzo dobry. 
+Pojedyncze zatrzymania w czerwonych, 
+niewsparte blotkami poza \xdiams 9. 
+Po 1\nt też byście doszli do 4\hearts. 
+Inna ręka? KQ♣ K♦. Idealne wartości, 
+3\nt na impasie do inwitu. \xclubs K \xdiams K 
+\xhearts J. 7pc, 
+brak inwitu, ale końcówka jest na 
+trafieniu trefla i impasie pik, a gramy na maxy. 
+Najchętniej dałbym Ci bana na otwieranie 
+\xclubs 1 w 17pc, ale czasami trzeba, więc 
+tego nie zrobię. Otwarcie 1\nt zajmuje 
+z dobrej ręki, blokuje wszelkie wejścia, 
+np takie, które wskazują wist. Ogranicza 
+przepływ informacji między przeciwnikami. 
+Jest najpotężniejszym, najbardziej 
+despotycznym i dominującym otwarciem w 
+brydżu. Dużo częściej naciągamy 14pc 
+do otwarcia 1\nt niż 17 do otwarcia 1\minor. 
+Wyjątkami są ręce z kolorami starszymi, 
+z którymi otwarciem 1\nt łatwo omijamy 
+końcówki w kolory starsze, ale wasz system 
+nawet nie walczy z tym problemem. 
+Optymalnie jest otwieranie 1\nt z 5 
+starszą w silę (14)15(16)pc, a 1\major w silę 16-17.
 
 \pagebreak
 \section*{Rozdanie 3}
@@ -89,6 +126,19 @@ Wist \xspades 5 wzięty w stole, karo wzięte \xdiams K,
 trefl do asa. Przebiłam karo i 2 trefle w stole, kiera w ręce,
 na koniec oddając 2 piki.
 
+[KK] Otwarcie nawet się trzyma, 
+ale skład 4441 to najbardziej niewygodny, 
+sussy skład jaki może być i ciężko się na nim 
+licytuje, więc w 11pc można spasować, 
+aczkolwiek masz bardzo ładną kartę.
+Kontra na \nvul{N} ekstremalnie agresywna i 
+nie widać co miałaby wnieść. Lokalizacja 
+i jakość honorów w najlepszym wypadku 
+średnia, a do tego skład 4333. 
+Jedyne co ją broni to pierwszoręczny 
+pas partnera, ale to i tak bezcelowe 
+pokazywanie rozkładu siły przeciwnikom.
+
 \pagebreak
 \section*{Rozdanie 4}
 \handdiagramv{\vhand{AKT5}{63}{Q73}{7543}}
@@ -110,6 +160,19 @@ na koniec oddając 2 piki.
 powinnam markę, jako że mam cztery piki?). Bartek zmienił atak na trefla,
 wzięłam na króla i zagrałam w kiera. Rozgrywający
 wziął na \xhearts 8 i na prawdę nie wiem dlaczego wziął tylko swoje...
+
+[KK] O kurde, prawie że przykład z prezentacji xD \\
+Przy zrzutce jakościowej nie myślimy o tym co mamy, 
+tylko czy chcemy kontynuacji. Partner wistuje 
+\xspades A, czyli ma 4, lub 3 piki. 
+Niezależnie od tego ile, chcemy kontynuacji. 
+\xspades Q i tak weźmie lewę. 
+Nie musimy mieć figury, żeby markować. 
+Skoro chcemy kontynuacji możemy dać markę. 
+To znaczy musimy. Poza tym czemu 7, mamy 8. 
+Nie ma zrzucania drugiej karty od góry jako 75\% 
+demarki. Zrzucamy markę, albo demarkę. 
+Jednoznacznie. Nie robimy partnerowi wody z mózgu.
 
 \pagebreak
 \section*{Rozdanie 5}
@@ -148,7 +211,15 @@ Może jeszcze 3 razy i będę widział takie pasy.
 W karo, bo źle policzyłem atuty i myślałem, że 
 jak wezmę na \xspades K to dostaniesz klepę.
 
-\pagebreak
+[KK] 8pc+25pc=33pc. Partnerka blokowała, 
+brak antykontry=\xhearts K co najmniej. 
+Zostaje jej \textbf{maksymalnie} 4pc.\\
+1. nie wskazała chęci szukania przebitki, \\
+2. Szansa na przebitkę jest bardzo mała.
+
+Nie ma na blok, za mało lew. \xdiams Q w treflach 
+by przeważyła.
+
 \section*{Rozdanie 6}
 \handdiagramv{\vhand{T74}{763}{76432}{65}}
 {\vhand{9852}{AQ5}{Q95}{AKQ}}
@@ -176,6 +247,12 @@ króla kier (ale też mogło wypuścić?). Zostawienie \xspades T skończyłoby 
 bo żeby zerwać przymus musiałabym wyrzucić damę pik zostawiając \xspades A6.
 Z ilościówek powinnam znać cały skład, ale skąd
 mam wiedzieć o \xspades T...?
+
+[KK] Prawidłowe wejście, na maxy. \\
+Nie dajemy kontry, patrzymy na założenia.\\
+Obrona zbyt high level. 
+Pewnie można myśleć o marcę w pierwszej 
+lewie i później pokazaniu składu, żeby wywalić \xspades Q.
 
 \pagebreak
 \section*{Rozdanie 7}
@@ -207,6 +284,14 @@ ale babka na \vul{W} dokładała beznamiętnie (tak, wiem, że Kacper by trafił
 jakby miał Q7 to by se ją zostawił, 
 żeby umożliwić ci wzięcie piwa.
 
+[KK] Nie rozumiem dlaczego na 6\nt się bierze 
+nadróbkę, ale może wy znacie jakieś sekrety, 
+których ja nie znam. \\
+Jeszcze nie wiem z jakich przesłanek 
+przystolikowych, ale bym trafił.
+
+[KG] Już wyjaśnione, dobrze napisałam z tą nadróbką.
+
 \pagebreak
 \section*{Rozdanie 8}
 \handdiagramv{\vhand{A9654}{542}{Q54}{K6}}
@@ -228,6 +313,11 @@ jakby miał Q7 to by se ją zostawił,
 [KG] W sumie jak pas jest forsujący, to ja powinnam wynieść.
 Wist 3\diams, impas kier, +1. Nie znaleźli przebitki.
 
+[KK] \pass jest forsujący, bo opsy robią 
+sobie jaja, a to my mamy przewagę siły. 
+Można 3\nt i wynieść w 4\diams. 
+Albo po prostu 5\diams z bomby.  
+
 \pagebreak
 \section*{Rozdanie 9}
 \handdiagramv{\vhand{J7}{KQJ}{AT765}{AJT}}
@@ -245,6 +335,11 @@ Wist 3\diams, impas kier, +1. Nie znaleźli przebitki.
 \end{table}
 
 [KG] Tym razem ja nie inwitowałam z 8... +2, wist \xhearts 7.
+
+[KK] Dobre 8, sztywniutki inwit. 
+Chociaż bliżej pasa niż ręka Bartosha. 
+Jakby zrobić z tego 4333 i może wykasować 
+kilka 8 też bym spasował.
 
 \pagebreak
 \section*{Rozdanie 12}
@@ -285,6 +380,27 @@ więc na wznówkę musi mieć co najmniej niezłe kolory.
 Biorą pewnie 6 lew w kolorach starszych, 
 a my nie mamy źródła lew, bo karo się nie dzieli, 
 a trefli mamy za mało.
+
+[KK] Nie rozumiem połowy waszych odzywek. 
+Co to jest za sztuczka z 1\nt? Nie daję inwitu, 
+bo może będą w 2\hearts to ich pierdolniemy. 
+Żarcik, nie kontrujemy 2\hearts. 
+\rdbl nie forsuje nas w sumie do niczego, 
+bo ta sekwencja z 1\nt i \rdbl nie ma żadnego 
+sensu, ani prawa bytu, więc uznałbym, 
+że każda kontra jest po prostu karna, 
+ale takiej licytacji to nie ma. 
+Jakby poszła sensowniejsza sekwencja typu 
+1\clubs -- 1\hearts -- 1\nt -- \dbl -- \rdbl uznałbym, 
+że jesteśmy sforsowani do 2\spades, 
+to może zbiec. Chyba nigdy w sekwencji z 
+\rdbl na 1\nt nie jesteśmy sforsowani do 
+2\nt. No, ale tu nic nie ma sensu, 
+więc nawet nie wiem co mam o licytacji powiedzieć. 
+Na oko nielicytowanie 1\nt w 11 zajebistych 
+punktów z opozycją rozwiązałoby każdy problem. 
+Ku zaskoczeniu licytowanie tego co się 
+ma bywa najlepszą opcją.   
 
 \pagebreak
 \section*{Rozdanie 13}
@@ -333,6 +449,9 @@ i rozgrywająca oddała jeszcze tylko \xclubs K, -1
 zamiast -2. A 4\diams było swoje (na trafieniu trefla), 
 może mogłam wrzucać...?
 
+[KK] Sprzedałaś dokładnie to co miałaś przez 
+3\diams, 4\diams jest statystycznie złe. Analizujemy blotki.
+
 \pagebreak
 \section*{Rozdanie 15}
 \handdiagramv{\vhand{T984}{A82}{JT}{T642}}
@@ -353,6 +472,8 @@ może mogłam wrzucać...?
 [KG] Zdecydowałam się na wist kierowy, a nie karowy.
 Wzięliśmy 3 kiery, karo i \xclubs K. Po karowym 
 wzięlibyśmy 3 kara, 2 kiery i (prawie na pewno) \xclubs K.
+
+[KK] Bardzo dobry wist, nie szukali starych.
 
 \pagebreak
 \section*{Rozdanie 16}
@@ -379,6 +500,8 @@ wyciągnąć pika (ale niewiele tu brakuje żeby pik wypuszczał).
 -1.
 
 [BS] No ja bym wyjął pika w momencie kiedy \vul{S} wyjął 4\spades z boxa.
+
+[KK] Wist w pika wydaje się być automatyczny, najbezpieczniejszy.
 
 \pagebreak
 \section*{Rozdanie 17}
@@ -412,6 +535,8 @@ gdzie rozgrywający miał renons trefl. Wtedy trzeba natychmiast
 skrócić stół i jeśli \nvul{S} musi oddać atuta dostaje drugi skrót i 
 trefle idą spać do łóżeczka. \xspades 2 bo myślałem że masz króla ale idk.
 
+[KK] Wszystko elegancko. Dobrze, że \xspades A, a nie blotka. 
+
 \pagebreak
 \section*{Rozdanie 18}
 \handdiagramv{\vhand{AQ64}{54}{KQT65}{T3}}
@@ -434,6 +559,18 @@ trefle idą spać do łóżeczka. \xspades 2 bo myślałem że masz króla ale i
 partner uratował kontrakt bojąc się o piki. 5\clubs czapowe.
 
 [BS] Typiarz wszedł 2\hearts = kiery i inny, stąd mój pomysł z pikami.
+
+[KK] Nie musicie losować. Zakładam, że 
+3\clubs było naturalne i 3\diams również? 
+Jakieś z wartości? No nie wiem, tak czy 
+inaczej można dać 3\hearts jako 3ci kolor, 
+jeśli zostają 2 kolory to pokazujemy 
+zatrzymania. Wtedy Bartek może dać 
+3\spades; póltrzymanie, 
+3\nt; trzymanie pik, 
+4\clubs; brak trzymania i byście wszystko wiedzieli.
+ Tak na dobrą sprawę 5\clubs 
+ to decyzja wynikająca z braku zaufania.  
 
 \pagebreak
 \section*{Rozdanie 19}
@@ -460,6 +597,11 @@ A szlemik bardzo mierny. Wist \xclubs 4, +2.
 
 [BS] Zrolowałem se lewę, bo zapomniałem, że istnieje 
 coś takiego jak KJ sec i trzecie karo przebiłem dychą.
+
+[KK] Z \vul{W} na prawdę poszedł \pass na otwarciu? 
+Poza tym wszystko spoko, ale \pass? 
+Raz w życiu widziałem bardziej zamulającego 
+pasa w 11pc. Chociaż nie, ten jest imponujący xD
 
 \pagebreak
 \section*{Rozdanie 20}
@@ -499,6 +641,13 @@ wyszłam i tak, ale to chyba nic nie zmienia.
 
 [BS] Rozwiązaliśmy mu kiery. Piki nie uciekają, przebitki nie ma.
 
+[KK] Nie wiem czy bym nie wznowił kontrą na 
+Pluteckich na maxy. Mamy petardę układową, 
+a partner może tylko na to czekać. 
+Po prostu głupio z takim układem odpuszczać. 
+To byłby pewnie rodzaj ekstremalnie ostrej 
+kontry atakująco-obronnej.
+
 \pagebreak
 \section*{Rozdanie 22}
 \handdiagramv{\vhand{A5}{AJ87}{J842}{AT9}}
@@ -525,6 +674,12 @@ więc not worth it. Wist \xhearts K.
 
 [BS] Nie masz na jednostronne multi. Po co stawiać jak nie trzeba.
 
+[KK] Jasny chuj, Twoje jajniki są większe 
+niż niejedne jaja. Nie ma nawet rozmowy 
+od jednostronnym multi, powinno być w 
+przedziale 3-8, po partii jakieś 5-8. 
+Możesz dać zawsze 2\spades, nie ma sensu stawiać.
+
 \pagebreak
 \section*{Rozdanie 23}
 \handdiagramv{\vhand{9}{KQT9}{Q65}{AQT96}}
@@ -550,6 +705,12 @@ zdarzało się =. A jedna para nawet odważyła się skontrować 5\spades (XD).
 Na 6\spades z ręką \vul{S} powinno się dać pałę mając jedną lewę (czyli tak jak tu),
 a \vul{N} mając też jedną powinien spasować (\xhearts KQ chyba
 wystarczy).
+
+[KK] Spoko licytacja, wszystko git. 
+Nie pasujemy w tak duże karty, nie 
+dajemy też 4\spades, bo sprzedalibyśmy 
+podacola, o tym będzie jeszcze na 
+wykładzie. I to za 2 tygodnie. 
 
 \pagebreak
 \section*{Rozdanie 24}
@@ -611,6 +772,18 @@ bo wyrzucę trefla na karo.
 \vul{E} zabił i wyszedł w pika, którego ze 
 zdziwieniem wziąłem Królem (?) pokazując karty. +2.
 
+[KK] Gratuluję 69 w drugiej lewie. 
+No powiem, że całkiem kurwa nieźle. 
+A nie, wróć. Najlepszym trenerem jest 
+Maciej Kędzierski, muszę być jak on. 
+No spoko rozgrywka, może jakby mnie 
+obudzić po 3-dniowym melanżu w środku 
+nocy bym tak nie zrobił. 
+A tak serio to mega dobre, masz 
+ogromny potencjał mordeczko, więcej 
+wiary w siebie, więcej gry, więcej 
+analizy porozdaniowej. 
+
 \pagebreak
 \section*{Rozdanie 26}
 \handdiagramv{\vhand{JT53}{JT873}{5}{AT2}}
@@ -644,6 +817,14 @@ Widać, że rozgrywający ma:\\
 3 treflowe (bo sam je grał, więc ma 4 a może i 5 w ręce, nie ma znaczenia, jak mam dychę to mi spada.)\\
 Puszczenie raz mogło mieć sens bo nie pamiętam co wywalał. 2x na pewno nie.
 
+[KK] Wyjście w pika i tak ma sporo sensu. 
+I tak by sobie poradził z tymi karami. 
+Wyrzucenie pika nie jest takie głupie, 
+nie potrzebuje dojścia do lewy tylko podwójnego 
+zatrzymania. Na ten moment zagrożeniem 
+dla niego są piki. Kar potrzebuje, 
+żeby mieć co wyrabiać.
+
 \pagebreak
 \section*{Rozdanie 27}
 \handdiagramv{\vhand{KJ83}{AJ75}{QT4}{A2}}
@@ -673,6 +854,12 @@ Wist \xspades 2.
 [BS] W rozgrywce przeciwnik po dojściu \xspades A ściągnął \xdiams AK 
 i trzeba było trafić damę trefl co uczyniłem.
 
+[KK] 2\spades też mi się całkiem podoba. 
+Może nie jest to dość silna ręka, 
+ale wygląda nieźle. \pass na 2\spades to trup, 
+wypada coś ruszyć. Może nawet 4 od razu 
+z dobrze zlokalizowanym renonsem.
+
 \pagebreak
 \section*{Rozdanie 28}
 \handdiagramv{\vhand{K432}{QJ42}{KT5}{Q3}}
@@ -695,6 +882,14 @@ i trzeba było trafić damę trefl co uczyniłem.
 w tym jedna 5\diams. 3\nt z ręki \vul{N} idzie.\\
 Ania miała na 2\nt (na \vul{N}), Michał miał na
 dokład. Ale i tak zagrali 3\diams+1 za 64\%. Wist \xclubs 7.
+
+[KK] Jestem absolutnym fanem odzywki 1\nt 
+i passa na staymana. Idealne wskazanie wistu, 
+dobre zrobienie słabej opozycji w ciula. 
+Normalnie to nie zadziała, ale na maxy, 
+na taką parę możemy się bawić. W żadnej innej 
+sytuacji tak nie robimy, bardziej jako 
+jednorazowa sztuczka. Pewnie spora satysfakcja.
 
 \pagebreak
 \section*{Rozdanie 29}
@@ -724,6 +919,10 @@ wyrzuciłam \xdiams T, wyrzucenie damy wypuszcza, bo nie ma komunikacji do przeb
 
 Wzięliśmy 2 kara, przebitkę i 2 kiery.
 
+[KK] Po prostu z 55 powtarzasz kolor, 
+partner mógł mieć negatywny wybór koloru. 
+Zawsze z 2-3 wynosimy w pierwszy kolor otwarcia. 
+
 \pagebreak
 \section*{Rozdanie 30}
 \handdiagramv{\vhand{73}{Q9}{KT2}{KQJ984}}
@@ -746,5 +945,13 @@ Wzięliśmy 2 kara, przebitkę i 2 kiery.
 \xhearts 6 zamiast \xclubs T (na kiera).
 Jakoś nie chciałam tego trefla wyrzucić, kara spod wałka też nie,
 lekko podświadomie uznałam, że środkowy kier jest, z grubsza, na kiera.
+
+[KK] Z grubsza może być zrzutką neutralną. 
+Nie wiem jaka była obrona, ale trefl 
+wydaje się być kolorem wykluczonym. 
+W takich sytuacjach można grać 
+marką bezpośrednią, o której powiemy 
+na prezentacji o sygnalizacji w obronie. 
+Raczej wszystko git.
 
 \end{document}
