--- a/systemy/marek-mpj.tex
+++ b/systemy/marek-mpj.tex
@@ -61,7 +61,14 @@
 
 \sequence{{1\clubs}{1\diams}{1\hearts}}
 \begin{options}[2]
-    \item[\pass] 5+\hearts
+    \item[\pass] 5\hearts
+    \item[1\spades] 4+\spades 
+    \item[2\hearts] młode, krótkość \hearts\ \inv+
+    \item[2\spades] młode, krótkość \spades\ \inv+
+    \item[2\nt] młode (5\diams 4+\clubs), do wyboru na poziomie 3
+    \item[3\clubs] \gf\ \diams z krótkością \clubs
+    \item[3\diams] \gf\ \diams bez krótkości
+    \item[3\major] \gf\ \diams z krótkością   
 \end{options}
 
 \sequence{{1\clubs}{1\diams}{1\spades}}
@@ -69,7 +76,12 @@
     \item[1\nt] Brak fitu \clubs, 0-7PC
     \item[2\clubs] 3+\clubs, 0-7PC
     \item[2\diams] Do gry, 0-7PC
-    \item[Inne] NAT, pamiętając, że jest tu silny wariant GFa na \diams
+    \item[2\hearts] młode, krótkość \hearts\ \inv+
+    \item[2\spades] młode, krótkość \spades\ \inv+
+    \item[2\nt] \inv (8-10) (3352 no bo co innego)
+    \item[3\clubs] \inv (8-10)  
+    \item[3\diams] \gf\ \diams bez krótkości lub z krótkością \clubs
+    \item[3\major] \gf\ \diams z krótkością 
 \end{options}
 
 
@@ -266,7 +278,7 @@
 
 \sequence{{1\clubs}{1\hearts}{2\hearts}{2\spades}}
 \begin{options}[1]
-    \item[2\nt] 4\hearts (3\clubs = \lsf brak / niska / wysoka)
+    \item[2\nt] 4\hearts (3\clubs = \lsf\ brak / niska / wysoka)
     \item[3\clubs] 3\hearts, krótkość niska (\diams)
     \item[3\diams] 3\hearts, krótkość wysoka (\spades)
 \end{options}
