--- a/KrysiaBartek2024/analyses/tarnow_13_10_24.tex
+++ b/KrysiaBartek2024/analyses/tarnow_13_10_24.tex
@@ -1,35 +1,27 @@
-
 \documentclass[12pt, a4paper]{article}
 \usepackage{import}
 
-\import{../lib/}{bridge.sty}
+\import{../../lib/}{bridge.sty}
 
-\title{Board Set Analysis}
-\author{... using MacaroniBridge/TCResultsParser}
-
+\title{Żaczek 30.09.24}
+\author{Krysia \& Bartek}
 \begin{document}
 \maketitle
 
-    
-    
-\pagebreak
-\section*{Rozdanie 1}
+\section*{Rozdanie 1} % 3ntS Qs -2
 \handdiagramv{\vhand{976}{KJ92}{K4}{AK93}}
 {\vhand{T543}{A8543}{6}{875}}
 {\vhand{K}{QT}{Q98732}{QT62}}
 {\vhand{AQJ82}{76}{AJT5}{J4}}
 {}
 
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
+[KG] Ja na \nvul{W}. Jak tam się dolicytowali do 3\nt -- nie wiem,
+ale raczej mnie w tej licytacji nie było. Wist \xspades Q.
+Mogę wyciągnąć \xspades 8? Albo  w ogóle \xspades A? Szkoda, że nie pamiętam licytacji.
 
-    \end{tabular}
-\end{table}
 
 \pagebreak
-\section*{Rozdanie 2}
+\section*{Rozdanie 2} % 4sN Jh +1
 \handdiagramv{\vhand{AT854}{92}{AK93}{K8}}
 {\vhand{Q9}{JT53}{QJ4}{AJT2}}
 {\vhand{K763}{AKQ8}{62}{974}}
@@ -39,13 +31,23 @@
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
+        \nvul{W} (K) & \vul{N} & \nvul{E} (O) & \vul{S}\\
+        -- & -- & \pass & 1\clubs \\
+        \pass & 1\spades & \pass & 2\spades \\
+        \pass & 4\spades & all \pass & \\
     \end{tabular}
 \end{table}
 
+[KG] Wist \xhearts J. Jak zaimpasuje \xhearts T to ma 13 lew.
+Nie odważył się, ale czemu wziął tylko +1; na prawdę nie wiem,
+może impasował pika (nie no nie ma jak impasować xd). 
+Tu się nie da nie wziąć +2.
+
+Dobra, zapytałam Oliwii, gość oddał 2 trefle XD Nieźle
+
+
 \pagebreak
-\section*{Rozdanie 3}
+\section*{Rozdanie 3} % 4sE, 5d =
 \handdiagramv{\vhand{A954}{96}{KJ86}{642}}
 {\vhand{KQT76}{8}{T42}{AKT3}}
 {\vhand{J2}{K754}{Q9753}{85}}
@@ -55,13 +57,25 @@
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+        \vul{W} (K) & \nvul{N} & \vul{E} (O) & \nvul{S}\\
+        -- & -- & -- & \pass \\
+        1\hearts & \pass & 1\spades & \pass \\
+        2\hearts & \pass & 3\clubs & \pass \\
+        3\diams & \pass & 3\spades & \pass \\
+        4\spades & all \pass & & \\
     \end{tabular}
 \end{table}
 
+[KG] Bałam się że trafię na renons \hearts, więc dałam 4\spades, Oliwia wzięła = za 30\%. 
+W 4\hearts mam górne 11. Daje się 4\hearts...?
+
+\textit{Gość zapytał przed wistem czy wszystkie bidy naturalne, a Oliwia, że tak XD}
+
+Ale w sumie mogłam 3\hearts zamiast 3\diams. Przedłużam kiery i widać, że się boję o trzymanie.
+A Oliwia z renonsem i bez trzymania da [cośtam], to zagramy w te kiery.
+
 \pagebreak
-\section*{Rozdanie 4}
+\section*{Rozdanie 4} % 3ntS, Ad -2
 \handdiagramv{\vhand{K9}{K}{T52}{KQJ6532}}
 {\vhand{54}{J96}{QJ74}{T987}}
 {\vhand{QJ8762}{AT87}{86}{A}}
@@ -71,13 +85,26 @@
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
+        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
+        1\hearts & 2\clubs & \pass & 2\spades \\
+        \pass & 3\clubs & \pass & 3\nt \\
+        all \pass & & & \\
     \end{tabular}
 \end{table}
 
+[KG] \vul{S} bez wahania wrzucił 3\nt więc uznałam że wist 
+kierowy nie wygląda najlepiej. Zawistowałam \xdiams 
+A i byłam 
+z siebie dumna ale w sumie pół sali tak wistowało.
+No a kierowy akurat nie wypuszcza.
+Po ściągnięciu kar wzięłam \xspades A,
+do którego gośc wyrzucił króla. Wyszłam w kiera.
+Zebrał piki, ale już nie miał powrotu na stół.
+I tak powinien być -1. Chyba do jednego z kar wywalił pika.
+No niezbyt to przemyślał.
+
 \pagebreak
-\section*{Rozdanie 5}
+\section*{Rozdanie 5} % 
 \handdiagramv{\vhand{AT3}{9}{AQJ953}{KT8}}
 {\vhand{KQ864}{65}{T4}{Q763}}
 {\vhand{95}{AKJ832}{K86}{A2}}
@@ -87,10 +114,53 @@
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
+        \nvul{W} (K) & \vul{N} & \nvul{E} (O) & \vul{S}\\
+        -- & 1\diams & \pass & 1\hearts \\
+        \pass & 2\diams & \pass & ? \\
+        \pass & 3\nt & \pass & 4\diams \\
+        \pass & 4\nt & all \pass & \\
     \end{tabular}
 \end{table}
+
+[KG] Nie jestem pewna licytacji, Oliwia chyba nie wchodziła -- ja bym weszła.
+Na pewno \vul{S} wyniósł w 4\diams, a \vul{N} nie poczuł się wystarczająco
+zachęcony. Wist \xspades 6 i wzięli tyle ile sie należało (+1).
+
+Aczkolwiek wydaje mi się, że beztrosko pozbyłam się pików.
+Kiera też pewnie jakiegoś wyrzuciłam. To może dobrze, że Oliwia
+nie wchodziła -- gość mógłby, wiedząc, że nie mam już pików,
+oddać mi bezpiecznie kiera i wziąć wszystkie pozostałe lewy.
+Oliwka też raczej małego pika wyrzuciła, więc myślę, że i tak
+mógł założyć, że wist nie poszedł z \xspades F64 i zaimpasować to serduszko.
+I ogóle wydaje mi się, że wist był królem, a ja potem wyrzuciłam wałka na karo.
+Ale może nie.
+
+\vul{N} tłumaczył się, że nie chciał dać cue z singla.
+Ale 4\spades w sumie mógł. Chyba, że po nim już 4\nt nie
+zagrają i bał się o maxy.
+
+\vspace{0.5cm}
+
+Myślę, że z Bartkiem znaleźlibyśmy szlema:\\
+1\diams -- 1\hearts\\
+2\diams -- 2\spades\\
+2\nt -- 3\hearts\\
+3\nt -- 4\diams\\
+4\spades -- 5\clubs\\
+5\hearts -- 5\nt\\
+7\diams
+
+Gdzie: 2\spades = \gf, 5\hearts = asy.
+
+\vspace{0.5cm}
+
+Albo, jako że z ręki \vul{S} widać, że chcemy grać w
+\diams, nie w \hearts :\\
+1\diams -- 1\hearts\\
+2\diams -- 2\spades\\
+2\nt -- 3\diams\\
+3\spades -- 4\clubs\\
+4\spades -- ...
 
 \pagebreak
 \section*{Rozdanie 6}
@@ -103,10 +173,22 @@
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+        \vul{W} (O) & \nvul{N} & \vul{E} (K) & \nvul{S}\\
+        -- & -- & 1\clubs & 2\diams \\
+        \dbl & \rdbl & \pass & 2\hearts \\
+        \pass & \pass & \dbl & all \pass \\
     \end{tabular}
 \end{table}
+
+[KG] Dobrze, że nie na impy...
+
+Za to Oliwka dała pałę wistową, a ja się mocno zdziwiłam,
+że chce pałować multi, ja mam 19, a w dziadku wyjeżdża 11...
+
+Dobra, no to zakładając już tę pałę, co mam zrobić? Wrzucać 3\nt na koniec?
+A bez pały na \vul{W}, jak pójdzie 2\hearts, pasować? dać 2\spades? Pała?
+
+Pocieszenie jest takie, że nic nam nie idzie...
 
 \pagebreak
 \section*{Rozdanie 7}
@@ -119,10 +201,27 @@
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
+        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
+        -- & -- & -- & \pass \\
+        1\nt & \alrts{2\clubs} & \pass & 2\hearts \\
+        all \pass & & & \\
     \end{tabular}
 \end{table}
+
+[KG] Wist \xdiams A. RHO wolał kiery, więc wyobraziłam sobie 
+\xspades K u partnerki. Wyszłam \xspades J, puszczone, Oliwia 
+wzięła królem. Długi namysł, wyjście w pika (uf). 
+Teraz gość wyszedł w karo, Oliwia przebiła, 
+pik przebity. Oliwce mieści się jeszcze król. 
+Powinnam wyjść w karo, na wypadek singlowego 
+\xhearts K po drugiej stronie stołu, wtedy weźmiemy 2 
+atutowe. Jakoś założyłam drugiego króla i
+spokojnie wyszłam \xclubs A, \clubs. Rozgrywający wziął w 
+stole i zagrał \xhearts Q, Oliwia co prawda miała drugiego 
+królika, ale wskoczyła, dzięki czemu wzięliśmy jedną 
+atutową (strata ok. 30\%). Nawet wiedząc że ma 
+dwa atuty, powinnam wyjść karem, żeby nie dać jej 
+szansy na taką pomyłkę.
 
 \pagebreak
 \section*{Rozdanie 8}
@@ -132,13 +231,9 @@
 {\vhand{A54}{Q92}{KJ653}{75}}
 {}
 
-\begin{table}[h!]
-    \centering
-    \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
-    \end{tabular}
-\end{table}
+[KG] Licytacji nie pamiętam. 4\xspades \nvul{N}, wist \xclubs 3. 
+Nie mam pojęcia co on
+zrobił, żeby być -1.
 
 \pagebreak
 \section*{Rozdanie 9}
@@ -152,9 +247,13 @@
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+        -- & \pass & 1\diams & \pass \\
+        1\spades & \pass & 4\spades & all \pass \\
     \end{tabular}
 \end{table}
+
+[KG] Ajaj, pierwsze grane przez nas rozdanie to chyba moja największa
+porażka na tym turnieju :')
 
 \pagebreak
 \section*{Rozdanie 10}
@@ -167,10 +266,23 @@
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
+        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
+        -- & -- & \pass & \pass \\
+        1\nt & \pass & 2\diams & \pass \\
+        2\hearts & all \pass & & \\
     \end{tabular}
 \end{table}
+
+[KG] Wist \xclubs 8. Oddałam 2 piki, \xdiams K, 2 atuty. Przeciwnicy
+skomentowali, że nie dałam im szansy na pomyłkę (ze
+ściągnięciem pików). Ale przecież nie zacznę od ściągania trefli,
+więc nie wiem, jak to zrobić lepiej. Lepiej będzie jak zagram
+do \xhearts K, zaimpasuje karo i jeśli nie ściągną teraz pików,
+to już tego nie zrobią -- Zagram 4 trefle, jeśli \vul{N}
+przebije czwartego, to wezmą jednego pika, jeśli 
+\vul{S} przebije -- wezmą tylko jedną atutową.
+Ale jak figury kier są na odwrót -- w ten sposób stracę lewę.
+
 
 \pagebreak
 \section*{Rozdanie 11}
@@ -184,9 +296,16 @@
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
+        -- & -- & -- & \pass \\
+        1\clubs & 1\diams & 1\spades & 2\hearts \\
+        2\spades & 4\hearts & 4\spades & all \pass \\
     \end{tabular}
 \end{table}
+
+W sumie dobra obrona, bo w kiery idzie 12, szkoda, 
+że prawie nikt na sali nie zagrał. Ale przynajmniej
+nie skontrowali. A jak na 4\hearts zawistuję w karo,
+a \nvul{S} zabije asem, to już obkładamy.
 
 \pagebreak
 \section*{Rozdanie 12}
@@ -204,6 +323,8 @@
     \end{tabular}
 \end{table}
 
+O wow, ale zepsułam. Wist 
+
 \pagebreak
 \section*{Rozdanie 13}
 \handdiagramv{\vhand{75}{KQT973}{K54}{Q4}}
@@ -215,7 +336,7 @@
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
+        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
 
     \end{tabular}
 \end{table}
@@ -327,7 +448,7 @@
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
+        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
 
     \end{tabular}
 \end{table}
@@ -375,7 +496,7 @@
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
+        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
 
     \end{tabular}
 \end{table}
@@ -423,7 +544,7 @@
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
+        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
 
     \end{tabular}
 \end{table}
@@ -471,7 +592,7 @@
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
+        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
 
     \end{tabular}
 \end{table}
@@ -583,7 +704,7 @@
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
+        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
 
     \end{tabular}
 \end{table}
@@ -631,7 +752,7 @@
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
+        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
 
     \end{tabular}
 \end{table}
@@ -679,7 +800,7 @@
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
+        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
 
     \end{tabular}
 \end{table}
@@ -727,7 +848,7 @@
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
+        \vul{W} (K) & \vul{N} & \vul{E} (O) & \vul{S}\\
 
     \end{tabular}
 \end{table}
@@ -812,4 +933,4 @@
     \end{tabular}
 \end{table}
 
-\end{document}        
+\end{document}
