--- a/experimental/negat_krysia.tex
+++ b/experimental/negat_krysia.tex
@@ -13,31 +13,31 @@ Kiery \hearts \small{R.I.P.} trudno
 
 W negacie:
 \begin{itemize}
-    \item GF na \diams - bal/krt OK
+    \item GF na \diams - \bal\ lub z krótkością
     \item 0-6 bez 6M
     \item 7-10 bez 4M
-    \item młode słabe OK
-    \item młode lepsze OK
-    \item długie \clubs słabe OK
-    \item długie \clubs lepsze OK
-    \item inv z treflami OK
-    \item długie \diams słabe OK
-    \item długie \diams lepsze OK
-    \item inv z karami OK
-    \item inv+ młode z krt OK
+    \item młode słabe
+    \item młode lepsze
+    \item długie \clubs słabe
+    \item długie \clubs lepsze
+    \item \inv\ z treflami
+    \item długie \diams słabe
+    \item długie \diams lepsze
+    \item \inv\ z karami
+    \item \invp\ młode z krt
 \end{itemize}
 
 \subsubsection*{1\clubs -- ?}
 \begin{itemize}
     \item 1\diams = bardzo dużo różnych rzeczy
-    \item 1\nt = inwit, może mieć 4M, 2\clubs = do gry, 2\diams = Stayman 
+    \item 1\nt = inwit, może mieć 4\major, 2\clubs = do gry, 2\diams = Stayman 
     \item 2\clubs = GF bal (nie trefle!) 
-    \item 2\diams = multi 
+    \item 2\diams = Multi 
     \item 2\spades = trefle, GF lub blok 
     \item 2\nt = inwit z długim młodym, dalej: 3\clubs = acc z \diams, do pasa z \clubs | 3\diams = przyjęcie z \clubs, pasuj z \diams | 3\hearts = GF pytanie o młody 
-    \item 3\clubs = mixed? 
+    \item 3\clubs = mixed 
     \item 3\diams = GF \diams + 4\major $\leftarrow$ to mi się podoba 
-    \item 3\major = splinter?
+    \item 3\major = splinter
 \end{itemize}
 
 \subsubsection*{1\clubs -- 1\diams \\
@@ -55,7 +55,7 @@ W negacie:
 \begin{itemize}
     \item 1\spades = relay 
     \item 1\nt = młode bardzo słabe lub \gf\ z krótkością lub też bez, 
-    F1 -> 2\minor -> krótkość/2nt 
+    F1 -> 2\minor -> krótkość/2\nt 
     \item 2\minor = lepsza ręka z młodym (jakieś 6-9) 
     \item 2\hearts = \inv\ młode z krótkością 
     \item 2\spades = \inv\ młode z krótkością 
