--- a/experimental/transfery_po_blokach.tex
+++ b/experimental/transfery_po_blokach.tex
@@ -87,8 +87,9 @@
 \begin{itemize}
     \item Po karo tak samo jak po treflu, tylko fajnie czasem karo
     sfitować. 
-    \item Naturalne zalicytowanie kar (3\diams) jest \textit{competitive}.
-    \item Transfer na \diams; tak jak po treflu; \invp.
+    \item Tam gdzie jest Lebensohl to \diams competitive można dać przez Lebensohla.
+    Tam gdzie nie ma, naturalne zalicytowanie kar (3\diams) jest \textit{competitive}.
+    Wtedy transfer na \diams; tak jak po treflu; \invp.
     \item Nie mamy transferu na trefle, coś trzeba kombinować (np. Lebensohl i KP).
 \end{itemize}
 
@@ -98,7 +99,7 @@
     \item[2\spades] \nat\ \nf
     \item[2\nt] Lebensohl
     \item[3\clubs] \then\ \diams\ \invp
-    \item[3\diams] competitive
+    \item[3\diams] ask \hearts stopper \gf
     \item[3\hearts] \then\ \spades\ \invp
     \item[3\spades] \then\ \nt $\leftarrow$ ale można wywalić, albo dać coś fajnego po 3\nt
 \end{options}
@@ -108,8 +109,8 @@
     \item[\dbl] takeout
     \item[2\nt] Lebensohl
     \item[3\clubs] \then\ \diams\ \invp
-    \item[3\diams] competitive
-    \item[3\hearts] \nat\ \gf\ $\leftarrow$ bo do tej pory nie ma jak pokazać \hearts\ \imp
+    \item[3\diams] \then\ \hearts\ \invp
+    \item[3\hearts] ask \spades stopper \gf
     \item[3\spades] \then\ \nt
 \end{options}
 
@@ -135,13 +136,8 @@
 \vspace{2cm}
 {\Huge{\hearts}}\\
 \begin{itemize}
-    \item Dokładnie tak samo, jeden splinter bez przeskoku,
+    \item Dokładnie tak samo jak po \diams, jeden splinter bez przeskoku,
     ale to chyba i tak tak graliśmy.
-    \item 3\hearts zawsze competitive tak jak po \diams.
-    \item Właściwie jak mamy wspaniałego Lebensohla to można
-    jeszcze zrobić \then\ nasz kolor przez Lebensohla,
-    wtedy by było słabe, a bezpośrednie np. inwit.
-    \item Ale na razie zostawiam jak było.
 \end{itemize}
 
 \sequence{{1\hearts}{(2\spades)}}
@@ -150,7 +146,7 @@
     \item[2\nt] Lebensohl
     \item[3\clubs] \then\ \diams\ \invp
     \item[3\diams] \then\ \hearts\ \invp
-    \item[3\hearts] competitive
+    \item[3\hearts] ask \spades stopper \gf
     \item[3\spades] splinter
     \item[4\minor] color + fit
 \end{options}
