--- a/experimental/transfery_po_blokach.tex
+++ b/experimental/transfery_po_blokach.tex
@@ -88,8 +88,7 @@
     \item Po karo tak samo jak po treflu, tylko fajnie czasem karo
     sfitować. 
     \item Tam gdzie jest Lebensohl to \diams competitive można dać przez Lebensohla.
-    Tam gdzie nie ma, naturalne zalicytowanie kar (3\diams) jest \textit{competitive}.
-    Wtedy transfer na \diams; tak jak po treflu; \invp.
+    Tam gdzie nie ma, to trzeba sfitować naturalnie (tylko po 3\clubs).
     \item Nie mamy transferu na trefle, coś trzeba kombinować (np. Lebensohl i KP).
 \end{itemize}
 
