--- a/KrysiaBartek2024/SYSTEM/mpj2024.tex
+++ b/KrysiaBartek2024/SYSTEM/mpj2024.tex
@@ -22,6 +22,29 @@ W niniejszym pliku znajdują się tylko rzeczy nowe, często zmieniane albo łat
 
 Gramy \lsf, brak krótkości najpierw.
 
+\sequence{{1\clubs}{1\nt}}
+\begin{options}[1]
+    \item[2\clubs] do gry
+    \item[2\diams] Stayman
+    \item[2\major] \clubs + krótkość
+\end{options}
+
+\sequence{{(1\hearts)}{1\ntx}{(\pass)}}
+\begin{options}[1]
+    \item[2\clubs] \then \diams
+    \item[2\diams] ask 4\spades
+    \item[2\hearts] \then \spades
+    \item[2\spades] \inv\ or \clubs
+\end{options}
+
+\sequence{{(1\spades)}{1\ntx}{(\pass)}}
+\begin{options}[1]
+    \item[2\clubs] \then \diams
+    \item[2\diams] \then \hearts
+    \item[2\hearts] \inv or \clubs
+    \item[2\spades] ask 4\hearts\ \invp
+\end{options}
+
 \sequence{{1\diams}{1\spades}{2\diams}{2\hearts}}
 \begin{options}[1]
     \item[3\clubs] 4+\hearts
